<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StreamActivity" >
    
    <LinearLayout
            android:id="@+id/statusmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/warntext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warn_txt" />

            <Button
                android:id="@+id/enable_gui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_gui" />
            
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/gui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/guielements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/binaryname"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rtl_tcp_andro_exec" />

                <EditText
                    android:id="@+id/commandline"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/args_hint"
                    android:text="@string/default_args" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/license" />

                <Button
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/license"
                    android:text="@string/help" />

                <ToggleButton
                    android:id="@+id/onoff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:textOff="@string/stream"
                    android:textOn="@string/kill" />

                <CheckBox
                    android:id="@+id/forceRoot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/help"
                    android:layout_alignBottom="@+id/help"
                    android:layout_toRightOf="@+id/onoff"
                    android:text="@string/force_root" />
            </RelativeLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/ScrollArea"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_above="@+id/footer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/guielements"
            android:background="#3e3b5a" >

            <TextView
                android:id="@+id/terminal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3e3b5a"
                android:ems="10"
                android:gravity="center_vertical|top"
                android:textColor="#ffffff" />
        </ScrollView>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" >

            <Button
                android:id="@+id/copybutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/copy" />

            <Button
                android:id="@+id/clearbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/clear" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>